changing button hover color

--- a/resources/style.css
+++ b/resources/style.css
@@ -63,7 +63,7 @@ button{
 
 button:hover{
     cursor: pointer;
-    background-color: #cfc7f0;
+    background-color: #b9a9f7;
 }
 
 /* FORM SECTION */
