--- a/resources/style.css
+++ b/resources/style.css
@@ -29,6 +29,7 @@ nav li{
     font-size: 29px;
     font-size: 400;
     color: white;
+    cursor: pointer;
     
     
 }
@@ -136,7 +137,7 @@ form{
     .formCta label{
         padding-left: 5%;
     }
-
+}
 
 
 /* FOOTER SECTION */
