--- a/resources/style.css
+++ b/resources/style.css
@@ -66,7 +66,7 @@ button{
     border-radius: 25px;
     margin-top: 44px;
     font-size: 33px;
-    color: white;
+    color: black;
     background: linear-gradient(90deg, #A18CD1 0%, #FBC2EB 100%);
     border: none;
     
