--- a/resources/style.css
+++ b/resources/style.css
@@ -1,38 +1,66 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap');
 
+/* GENERAL RULES */
+
+
+
+body{
+    background-color: black;
+    color:#FFFFFF;
+    font-family: 'Inter';
+    
+
+}
+
+button{
+    width:214px;
+    height: 55px;
+    border-radius: 25px;
+    margin-top: 44px;
+    font-size: 33px;
+    color: black;
+    background: linear-gradient(90deg, #A18CD1 0%, #FBC2EB 100%);
+    border: none;
+    
+    
+}
+
+button:hover{
+    cursor: pointer;
+    background: #b9a9f7;
+}
 
 /* HEADER SECTION */
 header{
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-body{
-    background-color: black;
-    color:#FFFFFF;
-    font-family: 'Inter';
+} 
 
-}
 
 header img{
     width: 165px;
     height: auto;
-}
-
-nav ul{
-    padding-left: 0;
+    
 }
 
 nav li{
     list-style: none;
     text-align: center;
     font-size: 29px;
-    font-size: 400;
+    font-weight: 400;
     color: white;
     cursor: pointer;
     
     
 }
+
+nav ul{
+    padding-left: 0;
+    
+}
+
+
 
 nav li:hover{
     color: rgb(190, 187, 187);
@@ -60,28 +88,13 @@ main h2{
     font-weight: 400;
 }
 
-button{
-    width:214px;
-    height: 55px;
-    border-radius: 25px;
-    margin-top: 44px;
-    font-size: 33px;
-    color: black;
-    background: linear-gradient(90deg, #A18CD1 0%, #FBC2EB 100%);
-    border: none;
-    
-}
 
-button:hover{
-    cursor: pointer;
-    background: #b9a9f7;
-}
+
+
 
 @media only screen and (max-width:600px){
     main h2{
         font-size: 23px;
-       
-        
     }
     
     
@@ -109,11 +122,8 @@ form{
     font-size: 33px;
     font-size: 400;
     padding-left: 15%;
-    float: left;
-    align-self: flex-start;
-   
-
     
+    align-self: flex-start;
 }
 
 .formCta input{
@@ -130,8 +140,6 @@ form{
 @media only screen and (max-width:600px){
     .formCta input{
         width: 90%;
-       
-        
     }
 
     .formCta label{
@@ -156,4 +164,11 @@ footer h2{
 footer button{
     width: 366px;
     margin-bottom: 50px;
+}
+
+@media only screen and (max-width: 600px){
+    
+    footer button{
+        width: 340px;
+    }
 }
